# proxy-gateway

./: .dockerignore  .gitignore  BAIL_SCRIPTS.md  Cargo.toml  Dockerfile  README.md  SCRIPTS.md  biome.json  config.toml  lefthook.yml  openapi.json  package.json
analytics-service/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  buf.gen.yaml  drizzle.config.ts  package.json  tailwind.config.ts  tsconfig.json
deployment/: docker-compose.yml
docs/: OBSERVABILITY_PLAN.md
httpcloak-patched/: .gitignore  CHANGELOG.md  LICENSE  README.md  go.mod  go.sum  httpcloak.go  ja3_e2e_test.go  local_proxy.go
httpcloak-patched/bindings/python/: README.md  build_wheels.py  pyproject.toml
httpcloak-patched/bindings/python/httpcloak/: __init__.py  client.py
proxies/: datacenter.txt  residential.txt
proxy-gateway/: Cargo.toml  Dockerfile  affinity_params.go  allowlist.go  allowlist_test.go  api.go  bail_apply.go  bail_script.go  bail_script_engine_test.go  bail_script_regex_test.go  bail_script_test.go  config.go  epoch_listener.go  go.mod  go.sum  health.go  main.go  pipeline.go  response_script_test.go  script_builtins.go  script_builtins_test.go  script_engine.go  script_namespace.go  script_regex.go  script_regex_test.go  script_registry.go  script_response_bailing.go  script_response_bailing_apply.go  script_response_bailing_chain_test.go  script_response_bailing_test.go  server.go  server_test.go  session_params.go  testmain_test.go  usage_query_test.go  usage_tracker.go  usage_tracker_test.go  username.go
proxy-gateway-client/: package.json
proxy-gateway-client-go/: README.md  client.go  client_test.go  e2e_admin_test.go  e2e_fingerprint_test.go  e2e_h2_test.go  e2e_helpers_test.go  e2e_proxy_test.go  e2e_test.go  e2e_websocket_test.go  proxy_client.go  proxy_configuration.go  proxy_configuration_test.go  retry.go  retry_test.go  scripts_test.go  username.go  username_test.go
proxy-gateway-client-ts/: package.json
proxy-gateway-core/: Cargo.toml
proxy-gateway-source-geonode/: Cargo.toml
proxy-gateway/analytics/: client.go
proxy-gateway/cmd/proxy-gateway-server/: api.go  config.go  context.go  main.go  parse_json_creds.go  pipeline.go  server.go  server_test.go  sources.go
proxy-gateway/core/: auth.go  auth_test.go  conn_tracker.go  conn_tracker_test.go  context.go  context_test.go  core.go  core_test.go  counting.go  forward.go  gateway.go  handler.go  handler_test.go  helpers.go  http_downstream.go  http_upstream.go  mitm.go  mitm_test.go  proxy.go  ratelimit.go  ratelimit_test.go  session.go  session_test.go  socks5_downstream.go  socks5_upstream.go  sticky.go  transport.go  upstream.go
proxy-gateway/db/: sqlc.yaml
proxy-gateway/db/migrations/: 001_usage.sql
proxy-gateway/db/queries/: usage.sql
proxy-gateway/examples/: fingerprint.go
proxy-gateway/gateway/: counting.go  gateway.go  socks5.go
proxy-gateway/middleware/: middleware_test.go  mitm.go  parse_json_creds.go
proxy-gateway/middleware/examples/: fingerprint.go
proxy-gateway/source-bottingtools/: config.go  username.go
proxy-gateway/source-geonode/: config.go  username.go
proxy-gateway/source-static-file/: source.go
proxy-gateway/src/: api.rs  config.rs  main.rs  proxy.rs  rotator.rs  source.rs
proxy-gateway/utils/: auth_map.go  auth_map_test.go  cheap_random.go  counting_pool.go  counting_pool_test.go  country.go  meta.go  provider_bottingtools.go  provider_geonode.go  provider_static_file.go
proxy-kit/: README.md  conn_tracker.go  (+9 more)
(+260 files in other folders)
