[workspace]
members = [
    "proxy-gateway",
    "proxy-gateway-core",
    "proxy-gateway-source-bottingtools",
    "proxy-gateway-source-static-file",
    "proxy-gateway-source-geonode",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
proxy-gateway-core = { path = "proxy-gateway-core" }
proxy-gateway-source-bottingtools = { path = "proxy-gateway-source-bottingtools" }
proxy-gateway-source-static-file = { path = "proxy-gateway-source-static-file" }
proxy-gateway-source-geonode = { path = "proxy-gateway-source-geonode" }

# Async runtime & networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
base64 = "0.22"
dashmap = "6"
utoipa = { version = "5", features = ["openapi_extensions"] }

# Dev / test
tempfile = "3.25.0"
