[package]
name = "proxy-gateway"
version = "0.7.0"
edition = "2021"

[lib]
name = "proxy_gateway"
path = "src/lib.rs"

[[bin]]
name = "proxy-gateway"
path = "src/main.rs"

[[bin]]
name = "gen-openapi"
path = "src/bin/gen_openapi.rs"

[dependencies]
proxy-gateway-core.workspace = true
proxy-gateway-source-static-file.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
anyhow.workspace = true
http.workspace = true
serde.workspace = true
toml.workspace = true
dashmap.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[dev-dependencies]
tempfile.workspace = true
